# robot_blue_gazebo

./: .project  README.md
aurova_plugins/: CMakeLists.txt  package.xml
aurova_plugins/include/: ActorStopObstaclePlugin.hh
aurova_plugins/src/: ActorStopObstaclePlugin.cc
blue_description/: CMakeLists.txt  package.xml
blue_description/config/: blue_ackermann_ctrlr_params.yaml
blue_description/launch/: ackermann_vehicle.launch  rviz.launch  spawn.launch
blue_description/meshes/: aro_delantero.stl  base_alero.stl  eje_delantero_d.stl  eje_delantero_i.stl  eje_trasero_d.stl  eje_trasero_i.stl  rueda_delantera.stl  rueda_trasera.stl  velodyne.stl
blue_description/urdf/: blue.gazebo  blue.xacro  blue_ackerman.xacro  blue_materials.xacro  em_3905.urdf.xacro  macros.xacro
blue_gazebo/: CMakeLists.txt  package.xml
blue_gazebo/launch/: blue.launch  blue_no_ackermann.launch
blue_gazebo/worlds/: blue2.world  lands_01.world  urban_01.world  urban_01_v00.world  urban_01_v01.world  urban_01_v02.world  walk.world
config/: em_3905_ackermann_ctrlr_params.yaml
plugins/: CMakeLists.txt  package.xml
plugins/include/: ActorStopObstaclePlugin.hh
plugins/src/: ActorStopObstaclePlugin.cc
robot_blue_gazebo/: CMakeLists.txt  package.xml
